@@ -1,3 +1,7 @@
+2014-06-22  Benno Schulenberg  <bensberg@justemail.net>
+	* src/browser.c (parse_browser_input), src/help.c (parse_help_input):
+	Remove two pointless calls of get_shortcut(), and adjust the comments.
+
 2014-06-22  Mark Majeres  <mark@engine12.com>
 	* src/text.c (do_redo): When redoing a line join at the tail
         of the file, make sure openfile->filebot is updated.
